[package]
name = "arcdps_codegen"
version = "0.8.0"
authors = ["greaka <crates@greaka.de>"]
edition = "2018"
description = "Macros for arcdps"
repository = "https://github.com/greaka/arcdps_bindings"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.43"
paste = "1.0.8"

[dependencies.syn]
version = "1.0.99"
features = ["full"]
