[package]
name = "arcdps_codegen"
version = "0.11.0"
authors = ["greaka <crates@greaka.de>"]
edition = "2021"
description = "Macros for arcdps"
repository = "https://github.com/greaka/arcdps_bindings"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
imgui = []

[dependencies]
quote = "1.0.38"
proc-macro2 = "1.0.93"
paste = "1.0.15"

[dependencies.syn]
version = "1.0.109"
features = ["full"]
