[package]
name = "arcdps"
version = "0.8.0"
authors = ["Greaka <crates@greaka.de>"]
edition = "2018"
description = "Rust bindings for the Guild Wars 2 dps-meter with focus on ease-of-use and performance."
repository = "https://github.com/greaka/arcdps_bindings"
categories = ["api-bindings"]
keywords = ["arcdps", "guild-wars-2", "ffi", "addon", "framework"]
readme = "../README.md"
license = "MIT/Apache-2.0"

[dependencies]
once_cell = "1.13.0"
chrono = "0.4.20"

[dependencies.arcdps_codegen]
version = "0.8.0"
path = "../codegen"

[dependencies.imgui]
package = "arcdps-imgui"
version = "0.8.0"
features = ["tables-api"]
#git = "https://github.com/gw2scratch/imgui-rs"
#path = "../../imgui-rs/imgui"

[dependencies.log]
version = "0.4.17"
optional = true
features = ["std"]

[features]
default = ["log"]
