[package]
name = "arcdps"
version = "0.11.1"
authors = ["Greaka <crates@greaka.de>"]
edition = "2021"
description = "Rust bindings for the Guild Wars 2 dps-meter with focus on ease-of-use and performance."
repository = "https://github.com/greaka/arcdps_bindings"
categories = ["api-bindings"]
keywords = ["arcdps", "guild-wars-2", "ffi", "addon", "framework"]
readme = "../README.md"
license = "MIT/Apache-2.0"

[dependencies]
chrono = "0.4.39"

[dependencies.arcdps_codegen]
version = "0.11.0"
path = "../codegen"

[dependencies.imgui]
package = "arcdps-imgui"
version = "0.8.0"
features = ["tables-api"]
optional = true

[dependencies.log]
version = "0.4.25"
optional = true
features = ["std"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]
optional = true

[features]
default = ["imgui", "log"]
imgui = ["dep:imgui", "arcdps_codegen/imgui"]
serde = ["dep:serde", "chrono/serde"]
